@@ -1,1 +1,13 @@
 const ENCRYPTION_PASSWORD = "";
+
+
+
+
+
+
+
+
+// const DO_NOT_BLOCK_IFRAMES = true;
+// const DO_NOT_BLOCK_EMBEDS = true;
+// const DO_NOT_BLOCK_OBJECTS = true;
+// const DO_NOT_BLOCK_SCRIPTS = true;
