@@ -7,24 +7,26 @@
 <script src="background.js"></script>
 
 <script type = "text/javascript">
-	
-	var firstLoad = false;
-	if (config.get('currVersion') <= 0)
-		firstLoad = true;
 		
-	if (config.get('currVersion') < 9000)
+	if (config.get('currVersion') < 9001)
 	{	
-		config.set('currVersion', 9000);
-		config.set('currDisplayVersion', "0.9.0");
+		// Because we introduced lastVersion in 9001
+		if (config.get('currVersion') == 9000)
+			config.set('lastVersion', 9000);
+			
+		config.set('currVersion', 9001);
+		config.set('currDisplayVersion', "0.9.1");
 	}
 	
-	if (firstLoad || !isPasswordGood())
+	if (!isPasswordGood())
 	{
 		showOptionsPage();
 		//chrome.tabs.create({"url": chrome.extension.getURL("CHANGE__PASSWORD__HERE.js")});
 	}	
 	
 	config.set('globalAllowAll', false);
+	urlsGloballyAllowed = config.get('globalAllowAll');
+	//console.log("globalAllowAll at init: " + urlsGloballyAllowed + "   " + config.get('globalAllowAll'));
 
 	const maxBlinks = 6;
 	var lastAnimatedTab = null;	
@@ -57,17 +59,6 @@
 			}
 			if (config.get('showPageActionButton'))
 			{	
-				/*
-				if (urlsGloballyAllowed || isAllowed(tab.url))
-				{
-					chrome.pageAction.setIcon({path: "IconAllowed.png", tabId: tab.id});
-				}
-				else
-				{
-					chrome.pageAction.setIcon({path: "IconForbidden.png", tabId: tab.id});
-				}
-				chrome.pageAction.show(tab.id);
-				*/
 				chrome.pageAction.setIcon({path: "IconForbidden.png", tabId: tab.id});
 				chrome.pageAction.show(tab.id);
 				chrome.tabs.sendRequest(tab.id, {type: "get sources for top window"}, function(response){
