@@ -2,7 +2,7 @@
 	"update_url": "http://clients2.google.com/service/update2/crx",
 
 	"name": "NotScripts",
-	"version": "0.9.0",
+	"version": "0.9.1",
 	"minimum_chrome_version": "5.0",
 	"background_page": "background.html",
 	"options_page": "options.html", 
